k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oficina-api
  namespace: oficina

spec:
  replicas: 1

  selector:
    matchLabels:
      app: oficina-api

  template:
    metadata:
      labels:
        app: oficina-api

    spec:
      containers:
        - name: oficina-api
          image: oficina_mecanica_api-api:latest
          imagePullPolicy: IfNotPresent

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          ports:
            - containerPort: 8080

          startupProbe:
            httpGet:
              path: /api/health
              port: 8080
            failureThreshold: 30
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
