k8s/sqlserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
  namespace: oficina
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      containers:
        - name: sqlserver
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433

          resources:
            requests:
              cpu: "250m"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "2Gi"

          readinessProbe:
            tcpSocket:
              port: 1433
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            tcpSocket:
              port: 1433
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          volumeMounts:
            - name: sqlserver-storage
              mountPath: /var/opt/mssql
      volumes:
        - name: sqlserver-storage
          persistentVolumeClaim:
            claimName: sqlserver-pvc
