k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oficina-api
  namespace: oficina
spec:
  type: NodePort
  selector:
    app: oficina-api
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
